--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,87 +16,86 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <nav>
-            <a href="services.html">Services</a>
-            <a href="#product">Product</a>
-            <a href="#vision">Vision</a>
-            <a href="#features">Features</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+    <header>
+        <div class="navbar">
+            <nav>
+                <a href="services.html">Services</a>
+                <a href="#product">Product</a>
+                <a href="#vision">Vision</a>
+                <a href="#features">Features</a>
+                <a href="#about">About</a>
+                <a href="contact.html">Contact</a>
 
-            <div class="logo">
-                <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        </nav>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="sectionone">
-            <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-            <h1>Services</h1>
-            <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat.
-                Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-            <div>
-                <hr>
-                <div class="boxsection">
-                    <div class="box box1">
-                        <h3>Digital Design</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class=" box box2">
-                        <h3>UX / UI</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="box box3">
-                        <h3>Digital Marketing</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="box box4">
-                        <h3>Web Development </h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="box box5">
-                        <h3>iOS Development</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
-                        <a href="#">Learn More</a>
-                    </div>
-                    <div class="box box6">
-                        <h3>Android Development</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-                        <a href="#">Learn More</a>
-                    </div>
+                <div class="logo">
+                    <a href="index.html"><img class "logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+            </nav>
+            </div>
+    </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="sectionone">
+        <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+        <h1>Services</h1>
+        <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <div>
+            <hr>
+            <div class="boxsection">
+                <div class="box box1">
+                    <h3>Digital Design</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+                    <a href="#">Learn More</a>
                 </div>
-                <hr>
-                <div class="sectiontwo">
-                    <div class="facts">
-                        <h3>Some Facts About Our Services</h3>
-                        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
-                            nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-                        <ul>
-                            <li>Awesome thing</li>
-                            <li>Amazing thing </li>
-                            <li>Cool thing</li>
-                            <li>Great thing</li>
-                        </ul>
-                    </div>
-                    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+                <div class=" box box2">
+                    <h3>UX / UI</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
+                    <a href="#">Learn More</a>
                 </div>
+                <div class="box box3">
+                    <h3>Digital Marketing</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="box box4">
+                    <h3>Web Development </h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="box box5">
+                    <h3>iOS Development</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis. </p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="box box6">
+                    <h3>Android Development</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+            <hr>
+            <div class="sectiontwo">
+                <div class="facts">
+                    <h3>Some Facts About Our Services</h3>
+                    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus
+                        nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+                    <ul>
+                        <li>Awesome thing</li>
+                        <li>Amazing thing </li>
+                        <li>Cool thing</li>
+                        <li>Great thing</li>
+                    </ul>
+                </div>
+                <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+            </div>
 </body>
 <footer>
     Copyright Great Idea! 2018
