--- a/great-idea/contact.html
+++ b/great-idea/contact.html
@@ -55,19 +55,20 @@
                     it is the company's obligation to take the factory to a place where they can make it more cheaply.</p>
             </div>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3470.5669262786755!2d-95.09152238461318!3d29.558103848336767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86409da671292593%3A0xf684f098a7237a30!2sNASA%20Mission%20Control%20Center!5e0!3m2!1sen!2sus!4v1570057913656!5m2!1sen!2sus"
-            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        <div class="contact">
-            <h2>Contact
-            </h2>
-            <address>123 Way 456 Street 
+        <div class="contactbottom">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3470.5669262786755!2d-95.09152238461318!3d29.558103848336767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86409da671292593%3A0xf684f098a7237a30!2sNASA%20Mission%20Control%20Center!5e0!3m2!1sen!2sus!4v1570057913656!5m2!1sen!2sus"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <div class="contact">
+                <h2>Contact
+                </h2>
+                <address>123 Way 456 Street 
             <br> Somewhere, USA </address>
-            <br> 1 (888) 888-8888
-            <br>
-            <br>sales@greatidea.io
-            <br>
+                <br> 1 (888) 888-8888
+                <br>
+                <br>sales@greatidea.io
+                <br>
+            </div>
         </div>
-
 
 
 
