Strech Goal Extra Page

--- a/great-idea/contact.html
+++ b/great-idea/contact.html
@@ -41,8 +41,11 @@
         <br>
         <br>
         <br>
+        <div class="nasaimage">
 
+        </div>
         <h1>We love to be contacted!</h1>
+        <hr>
         <div class="contacttop">
             <div class="box contactbox1">
                 <p>I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course. </p>
@@ -55,6 +58,7 @@
                     it is the company's obligation to take the factory to a place where they can make it more cheaply.</p>
             </div>
         </div>
+        <hr>
         <div class="contactbottom">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3470.5669262786755!2d-95.09152238461318!3d29.558103848336767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86409da671292593%3A0xf684f098a7237a30!2sNASA%20Mission%20Control%20Center!5e0!3m2!1sen!2sus!4v1570057913656!5m2!1sen!2sus"
                 width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -71,7 +75,7 @@
         </div>
 
 
-
+        <hr>
     </body>
     <footer>
         Copyright Great Idea! 2018
