Strech Goal Extra Page - complete

--- a/great-idea/contact.html
+++ b/great-idea/contact.html
@@ -42,18 +42,23 @@
         <br>
         <br>
         <div class="nasaimage">
-
+            <h1>We love to be contacted!</h1>
         </div>
-        <h1>We love to be contacted!</h1>
         <hr>
         <div class="contacttop">
             <div class="box contactbox1">
+                <h3>Neil deGrasse Tyson Ipsum</h3>
+                <img src="https://www.stickpng.com/assets/images/586ee8f987dadaa6bf8d2a3d.png" height="200px" width="200px">
                 <p>I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course. </p>
             </div>
             <div class="box contactbox2">
+                <h3>The Truth Is Out There</h3>
+                <img src="https://media.istockphoto.com/vectors/abducts-human-vector-id690862770?k=6&m=690862770&s=612x612&w=0&h=kpoSKzbbej71XXVG5LL6BTHz-_mZSdcDt2ERgiUpzrs=" height="200px" width="200px">
                 <p>For me at age 11, I had a pair of binoculars and looked up to the moon, and the moon wasn't just bigger, it was better. There were mountains and valleys and craters and shadows. And it came alive. </p>
             </div>
             <div class="box contactbox3">
+                <h3>Thanks For Stopping By!</h3>
+                <img src="https://image.freepik.com/free-vector/green-ufo_1110-630.jpg" height="200px" Width="200px">
                 <p>One of the symptoms of an absence of innovation is the fact that you lose your jobs. Everyone else catches up with you. They can do what you do better than you or cheaper than you. And in a multinational corporate-free market enterprise,
                     it is the company's obligation to take the factory to a place where they can make it more cheaply.</p>
             </div>
